resolve rep and senator layout issue on index pages

--- a/src/pages/Representatives/Representatives.css
+++ b/src/pages/Representatives/Representatives.css
@@ -12,6 +12,7 @@
 
 .all-representatives-container {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 0px;
 }
